--- a/www/partials/tours.html
+++ b/www/partials/tours.html
@@ -1,13 +1,49 @@
-<!--<nav class="main-menu">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Rap Sheet</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-</nav>
-<div menu-slideout>
+<snap-drawer style="background-color: #50a2f0">
+    <h1 ui-sref="index" style="background-color: #f0f050">Back</h1>
+    <h1>Tour List</h1>
+    <div ng-repeat="tour in tours">
+        <div snap-toggle="left" style="background-color: #f06250">
+            <h1>{{tour.title}}</h1>
+        </div>
+    </div>
+</snap-drawer>
+
+<snap-content snap-options="sliderOptions" style="background-color: #50f062">
+    <h1 snap-toggle="left" style="background-color: #50f0e4">View Tours</h1>
+    <div style="background-color: #f0f050">
+        <h1>Switching Maps</h1>
+        <div>
+            <iframe
+              width="450"
+              height="450"
+              frameborder="0" style="border:0"
+              src="https://www.google.com/maps/embed/v1/search?key=AIzaSyDb6dcBwQGLa1gjxKh0ki1W1qMtcZYsCGA&q=Houston">
+            </iframe>
+        </div>
+        <div>
+            <iframe
+              width="450"
+              height="450"
+              frameborder="0" style="border:0"
+              src="https://www.google.com/maps/embed/v1/search?key=AIzaSyDb6dcBwQGLa1gjxKh0ki1W1qMtcZYsCGA&q=Austin">
+            </iframe>
+        </div>
+        <div>
+            <iframe
+              width="450"
+              height="450"
+              frameborder="0" style="border:0"
+              src="https://www.google.com/maps/embed/v1/search?key=AIzaSyDb6dcBwQGLa1gjxKh0ki1W1qMtcZYsCGA&q=San Antonio">
+            </iframe>
+        </div>
+        </div>
+    </div>
+    <h1 ui-sref="index" style="background-color: #50f0e4">Start Tour</h1>
+</snap-content>
+
+
+<!--
+<div>
     <h1>Tours</h1>
     <div ng-repeat="tour in tours">
         <div>
@@ -16,7 +52,7 @@
             <p>Likes: {{tour.likes}}</p>
         </div>
     </div>
-</div>-->
+</div>
 
 <div class="page-wrapper">
 
@@ -72,4 +108,4 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, minima, consectetur, sint iste est quo aperiam dolores debitis suscipit quia cum voluptatem distinctio ullam! Quidem, esse doloribus tempore quis laudantium.
             </p>
         </div>        
-    </div>
+    </div> -->
