--- a/www/partials/origin.html
+++ b/www/partials/origin.html
@@ -1,2 +1,9 @@
-<h1 ui-sref="tours" style="background-color: #f06250">TOUR</h1>
-<h1 ui-sref="explore" style="background-color: #f06250">EXPLORE</h1>
+<!--<img src="../www/img/artour.png">-->
+<div class="textcontainer">
+    <p>
+    
+    <h1 ui-sref="tours">TOUR</h1>
+    <h1 ui-sref="explore">EXPLORE</h1>
+    <div id="rectangle"></div>
+    </p>
+</div>
