--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,23 +1,25 @@
 .textcontainer {
-    width: 5em;
-    margin: 0 auto 1em auto;
-    padding: 1em;
+    width: 7em;
+    margin: 0 auto;
+/*    padding: 1em;*/
     font-family: "Oswald", Sans-Serif;
     font-weight: 700;
-    font-size: 1000%;
+    font-size: 500%;
     color: white;
     line-height:100%;
+    
 }
 .textcontainer p{
     display: inline-block; /* won't work _reliably_, if at all, in IE < 8
                               but in other browsers will center the text
                               and shrink the element to fit its text */
     text-align: left;
+/*    float: left;*/
 }
 
 /*it is what it sounds like*/
 #rectangle{
-    width: 490px;
+    width: 552px;
     height: 50px;
     background: white;
     /*margin-left: auto;
@@ -67,12 +69,42 @@ html, body{
     background-repeat: no-repeat;
 	margin: 0;
 	padding: 0;
-	<!--font-family: 'Oswald', Sans-Serif;
-	font-size: 14px;
-	font-weight: 300;-->
+	font-family: 'Oswald', Sans-Serif;
+	
 }
 
 /* Site Overlay*/
 .site-overlay{
     display: none;
     }
+
+
+.menucontainer {
+    width: 6em;
+    margin: 0 auto 0 0;
+    padding: 1em;
+    font-family: "Oswald", Sans-Serif;
+    font-weight: 600;
+    font-size: 300%;
+    background-color: #9EAF94;
+    color: #fff;
+    line-height: 120%;
+    text-align: right;
+}
+.sub {
+    font-weight:100;
+}
+hr {
+  background: #fff; 
+  clear: both; 
+  float: none; 
+  width: 100%; 
+  height: 1px;
+  margin: 0 0 0.5em;
+  border: none; 
+}
+
+.buttoncontainer{
+    padding: 1em; 
+}
+
