AR test working; Error with accelerometer.

--- a/www/partials/origin.html
+++ b/www/partials/origin.html
@@ -1,9 +1,8 @@
 <!--<img src="../www/img/artour.png">-->
 <div class="textcontainer">
     <p>
-    
-    <h1 ui-sref="tours">TOUR</h1>
-    <h1 ui-sref="explore">EXPLORE</h1>
+    <h1 ui-sref="tours" style="background-color: #f24c4c">TOUR</h1>
+    <h1 ui-sref="explore" style="background-color: #f24c4c">EXPLORE</h1>
     <div id="rectangle"></div>
     </p>
 </div>
