--- a/www/partials/ar.html
+++ b/www/partials/ar.html
@@ -1,14 +1,11 @@
 <h1 ui-sref="index" style="background-color: #f0f050">Back</h1>
-<h1 ng-click="button()" style="background-color: #f0f050">Start/Stop Accelerometer</h1>
+<h3 ui-sref="test" style="background-color: #f0f050">Test Page</h3>
+<h3 ng-click="button()" style="background-color: #f0f050">Start/Stop Accelerometer</h3>
+<p>{{currAcc.y}}</p>
 <div class="arView" ng-show="phoneUp" style="background-color: #50f0bf">
     <h1>AR View</h1>
-    <p>x: {{currAcc.x}}</p>
-    <p>y: {{currAcc.y}}</p>
-    <p>z: {{currAcc.z}}</p>
 </div>
 <div class="mapView" ng-hide="phoneUp" style="background-color: #ea50f0">
     <h1>Map View</h1>
-    <p>x: {{currAcc.x}}</p>
-    <p>y: {{currAcc.y}}</p>
-    <p>z: {{currAcc.z}}</p>
+    <div id="map-canvas" style="background-color: #ebebda; width: 100%; height: 300px"></div>
 </div>
