--- a/www/partials/tours.html
+++ b/www/partials/tours.html
@@ -1,10 +1,12 @@
-<snap-drawer style="background-color: #50a2f0">
-    <h1 ui-sref="index" style="background-color: #f0f050">Back</h1>
+<snap-drawer>
+    <div class="menucontainer">
+    <h1 ui-sref="index">Back</h1>
     <h1>Tour List</h1>
     <div ng-repeat="tour in tours">
-        <div snap-toggle="left" ng-click="tourClick(tour)" style="background-color: #f06250">
+        <div snap-toggle="left" ng-click="tourClick(tour)" style="background-color: #f6250">
             <h1>{{tour.title}}</h1>
         </div>
+    </div>
     </div>
 </snap-drawer>
 
