Added AR Elements

--- a/www/partials/origin.html
+++ b/www/partials/origin.html
@@ -3,6 +3,7 @@
     <p>
     <h1 ui-sref="tours" style="background-color: #f24c4c">TOUR</h1>
     <h1 ui-sref="explore" style="background-color: #f24c4c">EXPLORE</h1>
+    <h1 ui-sref="test" style="background-color: #f24c4c">TEST</h1>
     <div id="rectangle"></div>
     </p>
 </div>
