--- a/www/partials/test.html
+++ b/www/partials/test.html
@@ -1,4 +1,5 @@
 <h1 ui-sref="index" style="background-color: #f0f050">Back</h1>
-<h3 ng-click="onDeviceR()" style="background-color: #f0f050">Start AR mode</h3>
-<h1>AR View</h1>
+<h1>Test View</h1>
+<button ng-click=button()>Add HTML</button>
+<div id="arElements"></div>
 </div>
