--- a/www/partials/origin.html
+++ b/www/partials/origin.html
@@ -1,4 +1,6 @@
-<div class="bgimage"></div>
+
+<div class="logotitle"><b>AR</b>tour
+</div>
 <div class="textcontainer">
     
     <h1 ui-sref="tours">TOUR</h1>
