--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,7 +4,7 @@ html, body{
 	overflow: -moz-scrollbars-vertical;
 	height: 100%; /* fixes focus scrolling in Safari (OS X) */
     
-    font: 100%/1.5 "Oswald", sans-serif;
+    font: 100% "Oswald", sans-serif;
     font-weight: 400;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;   
@@ -22,32 +22,36 @@ body{
     
     
 }
+#map-canvas{
+    margin-top: 1rem;
+    background-color: #ebebda; 
+    width: 100%; 
+    height: 93%;
+}
 
 .textcontainer {
-/*    width: 80%;*/
-/*    margin: 0 auto;*/
     padding: 2rem;
     font-family: "Oswald", Sans-Serif;
     font-weight: 700;
-    font-size: 5rem;
+    font-size: 10rem;
     color: white;
     line-height:100%;
     margin: 0 auto;
     
 }
-
-
-/*it is what it sounds like*/
-/*
-#rectangle{
-    width: 552px;
-    height: 50px;
-    background: white;
-*/
-    /*margin-left: auto;
-    margin-right: auto;*/
-   
+.logotitle {
+    font-family: "Lato", Sans-serif;
+    font-weight: 400;
+    color: #6798AC;
+    padding: 2rem;
+    font-size: 4rem;
+    background-color: white;
+    z-index:2;
     
+}
+.logotitle b {
+    font-weight: 700;
+    color: #FE7F78;
 }
 
 
@@ -71,37 +75,31 @@ a:active {
     color: #fff;
 }
 
-
-
-
-/* Site Overlay*/
+/* Site Overlay. I don't even know what this does.*/
 .site-overlay{
     display: none;
     }
 
 
-.menucontainer {
-    width: 40rem;
-    margin: 0;
-    padding: 0rem;
+#menucontainer {
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
     border: none;
-    font-weight: 600;
-    font-size: 3rem;
+    font-weight: 300;
+    font-size: 5rem;
     background-color: #9EAF94;
     color: #fff;
-    line-height: 4rem;
     text-align: right;
     z-index: 2;
-/*
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0.2rem 0.2rem 0.2rem #000;
-*/
+    line-height: 1rem;
+    
 }
 .sub {
     font-weight: 100;
     font-size: 2rem;
     line-height: 1.6rem;
+    padding: 3px;
 }
 
 /*horizontal rule*/
@@ -114,8 +112,6 @@ hr {
   margin: 0 0 0.6em;
   border: none; 
 }
-
-
 
 
 
@@ -149,43 +145,48 @@ Introduce layout-specific rules only when you need them. Use min-width to layer 
 */
 
 @media (min-width: 320px) {
-    html { font-size: 50%; }
+/*    html { font-size: 50%; }*/
+    .textcontainer{
+        font-size: 230%;
+    }
+    #menucontainer{
+        font-size: 150%;
+    }
     #rectangle{
-        width: 280px;
+        width: 260px;
         height: 30px;
-        background: white;}
+        background: white;
+    }
+    
 }
+
 @media (min-width: 480px) {
-    html { font-size: 78%; }
+/*    html { font-size: 78%; }*/
+    .textcontainer{
+        font-size: 378%;
+    }
     #rectangle{
-        width: 434px;
+        width: 420px;
         height: 46px;
-        background: white;}
+        background: white;
+    }
+    #menucontainer{
+        font-size: 150%;}
 }
  
 @media (min-width: 640px) { 
-    html { font-size: 104%; }
+/*    html { font-size: 104%; }*/
+    .textcontainer{
+        font-size: 520%;
+    }
     #rectangle{
         width: 576px;
         height: 61px;
         background: white;}
+    #menucontainer{
+        font-size: 150%;
+    }
 }
-@media (min-width: 768px) { 
-    html { font-size: 124%; }
-    #rectangle{
-        width: 690px;
-        height: 82px;
-        background: white;}
-}
-/*
-@media (min-width: 1024px) { 
-    html { font-size: 112%; }
-    #rectangle{
-        width: 690px;
-        height: 82px;
-        background: white;}
-}
-*/
 
 /*
 CSS Box Model
