--- a/www/partials/explore.html
+++ b/www/partials/explore.html
@@ -1,10 +1,11 @@
 <h1 ui-sref="index" style="background-color: #f0f050">Back</h1>
-<div class="arView" ng-show="phoneUp" style="background-color: #50f0bf">
+<div class="arView" ng-show="phoneUp" >
     <h1>AR View</h1>
     <h1 id="compass"></h1>
     <h1 id="direction"></h1>
+    <div id="arElements" style="backgroundColor:transparent"></div>
 </div>
-<div id="arElements" style="backgroundColor:transparent"></div>
+
 <div class="mapView" ng-hide="phoneUp" style="background-color: #ea50f0">
     <h1>Map View</h1>
     <div id="map-canvas" style="background-color: #ebebda; width: 100%; height: 300px"></div>
