--- a/www/css/style.css
+++ b/www/css/style.css
@@ -19,15 +19,16 @@ body{
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    
-    
 }
+
 #map-canvas{
     margin-top: 1rem;
     background-color: #ebebda; 
     width: 100%; 
     height: 93%;
 }
+
+
 
 .textcontainer {
     padding: 2rem;
@@ -36,9 +37,9 @@ body{
     font-size: 10rem;
     color: white;
     line-height:100%;
-    margin: 0 auto;
-    
+    margin: 0 auto; 
 }
+
 .logotitle {
     font-family: "Lato", Sans-serif;
     font-weight: 400;
@@ -46,13 +47,14 @@ body{
     padding: 2rem;
     font-size: 4rem;
     background-color: white;
-    z-index:2;
-    
+    z-index:2; 
 }
+
 .logotitle b {
     font-weight: 700;
     color: #FE7F78;
 }
+
 
 
 
@@ -88,13 +90,13 @@ a:active {
     border: none;
     font-weight: 300;
     font-size: 5rem;
-    background-color: #9EAF94;
+    background-color: #6798AC ;
     color: #fff;
     text-align: right;
     z-index: 2;
     line-height: 1rem;
-    
 }
+
 .sub {
     font-weight: 100;
     font-size: 2rem;
@@ -113,10 +115,148 @@ hr {
   border: none; 
 }
 
+/*image cropping for profiles*/
+.crop {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.crop img {
+    width: 400px;
+    height: 300px;
+/*    margin: -75px 0 0 -100px;*/
+    margin: auto;
+}
+
+/*.crop height and width define where to slice the bottom-most and right-most part of the image. .crop img height and width will scale the image. .crop img margin will pan the image*/
 
 
+/*beginning of show/hide text coding*/
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+figure {
+    margin: 0 0 1.3rem 0;
+    -webkit-transition: .125s linear;
+    -moz-transition: .125s linear;
+    -ms-transition: .125s linear;
+    -o-transition: .125s linear;
+    transition: .125s linear;
+}
+
+figure img {
+    max-width: 100%;
+    height: auto;
+}
+
+body:before, body:after {
+    content: "";
+    display: table;
+}
+
+body:after { clear: both }
+
+p { margin-bottom: 1.3rem }
+
+article {
+    margin-bottom: 3rem;
+    position: relative;
+    *zoom: 1;
+}
+
+article:before, article:after {
+    content: "";
+    display: table;
+}
+
+article:after { clear: both }
+
+article figure {
+/*    float: left;*/
+/*    width: 32.5%;*/
+      width: 100%;
+}
+
+article section:first-of-type {
+/*    float: right;*/
+    width: 62.5%;
+}
+
+article section:last-of-type {
+    display: none;
+    visibility: hidden;
+}
+
+section {
+    -webkit-transition: .125s linear;
+    -moz-transition: .125s linear;
+    -ms-transition: .125s linear;
+    -o-transition: .125s linear;
+    transition: .125s linear;
+    color: white;
+    text-align: left;  
+    font-family: "Oswald", sans-serif;
+}
 
 
+input[type=checkbox] {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+}
+
+[for="read_more"] {
+    position: absolute;
+    bottom: -3rem;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    padding: .65rem;
+    box-shadow: inset 1px 1px rgba(0, 0, 0, 0.1), inset -1px -1px rgba(0, 0, 0, 0.1);
+}
+
+[for="read_more"]:hover {
+    background: rgba(0,0,0,.5);
+    color: rgb(255,255,255);
+}
+
+[for="read_more"] span:last-of-type {
+    display: none;
+    visibility: hidden;
+}
+
+input[type=checkbox]:checked ~ section {
+    display: block;
+    visibility: visible;
+    width: 100%;
+}
+
+input[type=checkbox]:checked ~ figure { width: 100% }
+
+input[type=checkbox]:checked ~ [for="read_more"] span:first-of-type {
+    display: none;
+    visibility: hidden;
+}
+
+input[type=checkbox]:checked ~ [for="read_more"] span:last-of-type {
+    display: block;
+    visibility: visible;
+}
+/*end of hide/show text code*/
 
 
 
@@ -245,7 +385,8 @@ A container holds all elements and controls the page’s maximum width. Using a 
   .column.flow-opposite { float: right; }  
 }
 
-/*Columns are wrapped in rows to prevent other elements from stacking next to them, otherwise known as clearing issues. Rows are cleared using the popular clearfix, */
+
+/*Columns are wrapped in rows to prevent other elements from stacking next to them, otherwise known as clearing issues. Rows are cleared using the popular clearfix, 
 
 .clearfix:before,
 .clearfix:after {
