--- a/www/partials/explore.html
+++ b/www/partials/explore.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="arView" ng-show="phoneUp" style="height:100%;width:100%">
-    <div id="arElements" style="backgroundColor:transparent;width: 100%; height: 100%;"></div>
+    <div id="arElements" style="backgroundColor:transparent;width: 100%; height: 70%;padding-top:30%"></div>
 </div>
 
 <div class="mapView" ng-hide="phoneUp" style="height:100%;width:100%">
