--- a/www/partials/origin.html
+++ b/www/partials/origin.html
@@ -1,5 +1,12 @@
+<style>
+img {
+    float: right;
+    margin: auto;
+}
+</style>
 
 <div class="logotitle"><b>AR</b>tour
+<img src="../img/search.svg">
 </div>
 <div class="textcontainer">
     
