--- a/www/css/style.css
+++ b/www/css/style.css
@@ -33,7 +33,7 @@ body{
 .textcontainer {
     padding: 2rem;
     font-family: "Oswald", Sans-Serif;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 10rem;
     color: white;
     line-height:100%;
@@ -116,6 +116,7 @@ hr {
 }
 
 /*image cropping for profiles*/
+/*
 .crop {
     width: 100%;
     height: 100%;
@@ -127,14 +128,16 @@ hr {
 .crop img {
     width: 400px;
     height: 300px;
-/*    margin: -75px 0 0 -100px;*/
+    margin: -75px 0 0 -100px;
     margin: auto;
 }
+*/
 
 /*.crop height and width define where to slice the bottom-most and right-most part of the image. .crop img height and width will scale the image. .crop img margin will pan the image*/
 
 
 /*beginning of show/hide text coding*/
+/*
 * {
     margin: 0;
     padding: 0;
@@ -152,7 +155,9 @@ figure {
     -o-transition: .125s linear;
     transition: .125s linear;
 }
+*/
 
+/*
 figure img {
     max-width: 100%;
     height: auto;
@@ -171,29 +176,38 @@ article {
     margin-bottom: 3rem;
     position: relative;
     *zoom: 1;
+     overflow-y: scroll;
+        overflow-x: hidden;
+    height: 90%;
 }
 
 article:before, article:after {
     content: "";
     display: table;
 }
+*/
 
-article:after { clear: both }
+/*article:after { clear: both }*/
 
-article figure {
+/*article figure {*/
 /*    float: left;*/
 /*    width: 32.5%;*/
-      width: 100%;
-}
+/*      width: 100%;*/
+/*}*/
 
-article section:first-of-type {
+/*article section:first-of-type {*/
 /*    float: right;*/
-    width: 62.5%;
+/*    width: 62.5%;*/
+/*
+     overflow-y: scroll;
+        overflow-x: hidden;
 }
 
 article section:last-of-type {
     display: none;
     visibility: hidden;
+     overflow-y: scroll;
+        overflow-x: hidden;
 }
 
 section {
@@ -205,9 +219,12 @@ section {
     color: white;
     text-align: left;  
     font-family: "Oswald", sans-serif;
-}
+     overflow-y: scroll;
+        overflow-x: hidden;
+}*/
 
 
+/*
 input[type=checkbox] {
     border: 0;
     clip: rect(0 0 0 0);
@@ -255,7 +272,8 @@ input[type=checkbox]:checked ~ [for="read_more"] span:first-of-type {
 input[type=checkbox]:checked ~ [for="read_more"] span:last-of-type {
     display: block;
     visibility: visible;
-}
+*/
+/*}*/
 /*end of hide/show text code*/
 
 
