AR markers clickable

--- a/www/partials/test.html
+++ b/www/partials/test.html
@@ -1,5 +1,7 @@
-<h1 ui-sref="index" style="background-color: #f0f050">Back</h1>
+
 <h1>Test View</h1>
 <button ng-click=button()>Add HTML</button>
-<div id="arElements"></div>
+<div id="test"></div>
+<div ng-bind-html="arHTML">
+    <img src="../img/armarker.png" style="border:5px solid #00ffeb">
 </div>
