--- a/www/partials/explore.html
+++ b/www/partials/explore.html
@@ -3,42 +3,74 @@
         background-color:black;
 }
     #navcontainer{
-        width: 10rem;
-        height: 20rem;
+        width: 5rem;
+        padding: 1rem;
         z-index: 11;
         position: absolute;
-        padding: 1rem;
         background-color:none;
     }
     #testbuttons{
         width: 20rem;
         background-color: #f0f050;
     }
-    img.resize{
-        width:40%;
-    }
 </style>
+
 <div id="waiting_for_location" ng-hide=currPosition class="overlay"></div>
 <div id="to_far_from_campus" ng-hide=onCampus class="overlay"></div>
+
 <div id="navcontainer">
-    <a ui-sref="search"><img src="img/searchbutton.png" class="resize"></a> 
-    <a ng-click=openCamera()><img src="img/camerabutton.png" align="right" class="resize"></a><br/>
-    <a ng-click=toggleView()><img src="img/compassbutton.png" align="bottom" class="resize"></a>
+    <a ui-sref="index"><img src="img/back.svg" /></a><br/>
+    <a ng-click=openCamera()><img src="img/camera.svg" /></a><br/>
+    <a ng-click=toggleView()>
+        <style>
+                .map {
+                    fill:#FFFFFF;
+                }
+                .map.active {
+                    fill: red;
+                }
+            </style>
+        <span id="map_toggle_svg">
+            <svg ng-init="mapActive = false" ng-click="mapActive = !mapActive" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="82.529px" height="82.529px" viewBox="0 0 82.529 82.529" enable-background="new 0 0 82.529 82.529" xml:space="preserve">
+                <circle fill="#6798AC" cx="41.265" cy="41.265" r="41.043"/>
+                <g ng-class="{'map': !mapActive, 'map active': mapActive}">
+                    <polygon points="23.813,29.676 23.813,67.686 7.265,58.131 7.265,20.121     "/>
+                    <polygon points="75.263,20.121 75.263,58.131 58.714,67.686 58.714,29.676     "/>
+                    <polygon points="40.964,20.121 40.964,58.131 24.415,67.686 24.415,29.676     "/>
+                    <polygon points="58.114,29.676 58.114,67.686 41.565,58.131 41.565,20.121     "/>
+                </g>
+                <g enable-background="new    ">
+                    <defs>
+                        <polygon enable-background="new    " points="11.144,39.081 11.185,24.581 19.319,29.278 19.278,43.777                 "/>
+                    </defs>
+                    <clipPath>
+      <use xlink:href="#SVGID_1_" overflow="visible"/>
+    </clipPath>
+    <g clip-path="url(#SVGID_2_)">
+      <path fill="#6798AC" d="M15.229 34.937c-1.545-0.892-2.793-3.052-2.788-4.828 0.005-1.768 1.262-2.483 2.806-1.591 1.545 0.892 2.793 3.053 2.788 4.821C18.03 35.114 16.774 35.829 15.229 34.937M15.247 26.927c-0.543-0.313-1.095-0.516-1.63-0.578 -2.251-0.263-3.345 2.045-2.452 5.147 0.076 0.257 0.165 0.521 0.261 0.775l3.256 8.501c0.113 0.284 0.318 0.535 0.531 0.658 0.074 0.042 0.149 0.07 0.222 0.078 0.134 0.011 0.236-0.033 0.308-0.124l3.294-4.719c0.103-0.147 0.187-0.305 0.264-0.473 0.411-0.923 0.446-2.248 0.011-3.756C18.629 30.077 16.986 27.931 15.247 26.927"/>
+    </g>
+  </g>
+  <path fill="none" stroke="#6798AC" stroke-width="2" stroke-miterlimit="10" d="M16.507 42.041c0.815 0.159 1.64 0.287 2.47 0.386"/>
+  <path fill="none" stroke="#6798AC" stroke-width="2" stroke-miterlimit="10" stroke-dasharray="5.225,5.225" d="M24.192 42.686c4.789-0.071 9.624-0.943 14.105-2.264 5.943-1.752 11.223-5.256 17.171-6.92 10.095-2.824 20.542 7.766 16.265 18.014 -2.379 5.698-9.173 7.689-15.313 8.295"/>
+  <path fill="none" stroke="#6798AC" stroke-width="2" stroke-miterlimit="10" d="M53.812 59.994c-0.869 0.038-1.708 0.052-2.499 0.051"/>
+  <g enable-background="new    ">
+    <defs>
+      <polygon enable-background="new    " points="45.407,57.515 45.448,43.017 53.582,47.713 53.541,62.211                 "/>
+    </defs>
+    <clipPath>
+      <use xlink:href="#SVGID_3_" overflow="visible"/>
+    </clipPath>
+    <g clip-path="url(#SVGID_4_)">
+      <path fill="#6798AC" d="M49.492 53.37c-1.545-0.892-2.792-3.053-2.787-4.821 0.005-1.775 1.261-2.491 2.805-1.599 1.545 0.892 2.793 3.053 2.788 4.828C52.293 53.546 51.037 54.262 49.492 53.37M49.517 45.366c-0.545-0.314-1.1-0.517-1.637-0.578 -2.251-0.263-3.345 2.038-2.451 5.14 0.075 0.264 0.164 0.521 0.26 0.775l3.257 8.501c0.111 0.287 0.315 0.535 0.526 0.657 0.075 0.043 0.151 0.071 0.226 0.079 0.135 0.019 0.237-0.033 0.308-0.124l3.294-4.719c0.103-0.139 0.187-0.304 0.264-0.472 0.412-0.924 0.447-2.24 0.011-3.75C52.894 48.515 51.254 46.369 49.517 45.366"/>
+    </g>
+  </g>
+</svg></span></a><br/>
+    <a ui-sref="search"><img src="img/search.svg" /></a>
 </div>
 
 <div class="arView" ng-show="phoneUp" style="height:100%;width:100%;">
     <div id="arElements" style="backgroundColor:transparent;width: 100%; height: 100%;border:5px solid red;">
         <dir id="dir" content="arHTML"></dir>
-        <!--<img ng-src="img/armarker.png" ng-click=selectMarker(); style="position:absolute;left:10%;top:50%;border:5px solid yellow">
-        <img ng-src="img/armarker.png" style="position:absolute;left:20%;top:50%;border:5px solid green">
-        <img ng-src="img/armarker.png" style="position:absolute;left:30%;top:50%;border:5px solid purple">
-        <img ng-src="img/armarker.png" style="position:absolute;left:40%;top:50%;border:5px solid yellow">
-        <img ng-src="img/armarker.png" style="position:absolute;left:50%;top:50%;border:5px solid green">
-        <img ng-src="img/armarker.png" style="position:absolute;left:60%;top:50%;border:5px solid purple">
-        <img ng-src="img/armarker.png" style="position:absolute;left:70%;top:50%;border:5px solid yellow">
-        <img ng-src="img/armarker.png" style="position:absolute;left:80%;top:50%;border:5px solid green">
-        <img ng-src="img/armarker.png" style="position:absolute;left:90%;top:50%;border:5px solid purple">
-        <img ng-src="img/armarker.png" style="position:absolute;left:94%;top:60%;border:5px solid #01ffe5">-->
     </div>
 </div>
 
