--- a/www/partials/origin.html
+++ b/www/partials/origin.html
@@ -6,7 +6,7 @@ img {
 </style>
 
 <div class="logotitle"><b>AR</b>tour
-<img src="../img/search.svg">
+<img ui-sref="search" src="img/search.svg">
 </div>
 <div class="textcontainer">
     
