--- a/www/partials/origin.html
+++ b/www/partials/origin.html
@@ -1,12 +1,6 @@
-<style>
-img {
-    float: right;
-    margin: auto;
-}
-</style>
-
-<div class="logotitle"><b>AR</b>tour
-<img ui-sref="search" src="img/search.svg">
+<div class="logotitle">
+    <b ui-sref="search">AR</b>tour 
+    <img ui-sref="search" src="img/search.svg" class="logosearch" >
 </div>
 <div class="textcontainer">
     
