--- a/www/css/style.css
+++ b/www/css/style.css
@@ -27,8 +27,61 @@ body{
     width: 100%; 
     height: 93%;
 }
+.logosearch {
+    position:fixed;
+    top:2rem;
+    right:5%;
+    margin: 0 auto;
+    position: absolute;
+    width: 4rem;
+}
+#navcontainer{
+    width: 7rem;
+    padding: 1rem;
+    z-index: 11;
+    position: absolute;
+    background-color:transparent;
+}
+#navcontainertwo {
+    width: 60px;
+    height:60px;
+    z-index: 11;
+    background-color:transparent;
+    right: 1rem;
+    bottom: 1rem;
+    position: absolute;
+}
 
-
+/*used for pop ups*/
+    #wrapper {
+    height: 50%;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    width: 50%;
+}
+    #center {
+    bottom: 50%;
+    height: 100%;
+    position: absolute;
+    right: 50%;
+    width: 100%;
+}
+.message {
+    font-family: "Oswald", Sans-serif;
+    font-weight: 700;
+    font-size: 2rem;
+    color: white;
+        width: 18rem;
+        height: 10rem;
+        position: absolute;
+        z-index: 15;
+        text-align: center;
+    padding: 2rem;
+        background-color: #6798AC;
+        border-radius: 10px 10px 10px 10px;
+        box-shadow: 2px 2px 2px 0 #000;
+}
 
 .textcontainer {
     padding: 2rem;
@@ -40,11 +93,16 @@ body{
     margin: 0 auto; 
 }
 
+.sizeofbutton { 
+    width: 60px;
+    height: 60px; 
+}
+
 .logotitle {
     font-family: "Lato", Sans-serif;
     font-weight: 400;
     color: #6798AC;
-    padding: 2rem;
+    padding: 1rem;
     font-size: 4rem;
     background-color: white;
     z-index:2; 
@@ -55,7 +113,43 @@ body{
     color: #FE7F78;
 }
 
+#testbuttons{
+        width: 20rem;
+        background-color: #f0f050;
+    }
 
+ .description {
+        text-align: justify;
+        font-family: "Lato", serif;
+        font-weight: 200;
+        font-size: 1rem;
+        color: white;
+        
+     /* for word breaks */    
+        -ms-word-break: break-all;
+        word-break: break-all;
+
+     /* Non standard for webkit */
+        word-break: break-word;
+
+        -webkit-hyphens: auto;
+        -moz-hyphens: auto;
+        -ms-hyphens: auto;
+        hyphens: auto;
+        -webkit-hyphenate-limit-lines: 2;
+        -webkit-hyphenate-limit-zone: 10%;
+    }
+    
+    .title{
+        font-family: 'Lato', serif;
+        font-size: 1rem;
+        color: white;
+    }
+    
+    
+    img {
+        max-width: 100%;
+    }
 
 
 
@@ -77,11 +171,6 @@ a:active {
     color: #fff;
 }
 
-/* Site Overlay. I don't even know what this does.*/
-.site-overlay{
-    display: none;
-    }
-
 
 #menucontainer {
     width: 100%;
@@ -90,7 +179,7 @@ a:active {
     border: none;
     font-weight: 300;
     font-size: 5rem;
-    background-color: #6798AC ;
+    background-color: #6798AC;
     color: #fff;
     text-align: right;
     z-index: 2;
@@ -135,146 +224,68 @@ hr {
 
 /*.crop height and width define where to slice the bottom-most and right-most part of the image. .crop img height and width will scale the image. .crop img margin will pan the image*/
 
-
-/*beginning of show/hide text coding*/
-/*
-* {
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-figure {
-    margin: 0 0 1.3rem 0;
-    -webkit-transition: .125s linear;
-    -moz-transition: .125s linear;
-    -ms-transition: .125s linear;
-    -o-transition: .125s linear;
-    transition: .125s linear;
-}
-*/
-
-/*
-figure img {
-    max-width: 100%;
-    height: auto;
-}
-
-body:before, body:after {
-    content: "";
-    display: table;
-}
-
-body:after { clear: both }
-
-p { margin-bottom: 1.3rem }
-
-article {
-    margin-bottom: 3rem;
+/*profile buttons*/
+.footer {
     position: relative;
-    *zoom: 1;
-     overflow-y: scroll;
-        overflow-x: hidden;
-    height: 90%;
-}
-
-article:before, article:after {
-    content: "";
-    display: table;
-}
-*/
-
-/*article:after { clear: both }*/
-
-/*article figure {*/
-/*    float: left;*/
-/*    width: 32.5%;*/
-/*      width: 100%;*/
-/*}*/
-
-/*article section:first-of-type {*/
-/*    float: right;*/
-/*    width: 62.5%;*/
-/*
-     overflow-y: scroll;
-        overflow-x: hidden;
-}
-
-article section:last-of-type {
-    display: none;
-    visibility: hidden;
-     overflow-y: scroll;
-        overflow-x: hidden;
-}
-
-section {
-    -webkit-transition: .125s linear;
-    -moz-transition: .125s linear;
-    -ms-transition: .125s linear;
-    -o-transition: .125s linear;
-    transition: .125s linear;
-    color: white;
-    text-align: left;  
-    font-family: "Oswald", sans-serif;
-     overflow-y: scroll;
-        overflow-x: hidden;
-}*/
-
-
-/*
-input[type=checkbox] {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    width: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-}
-
-[for="read_more"] {
-    position: absolute;
-    bottom: -3rem;
-    left: 0;
     width: 100%;
-    text-align: center;
-    padding: .65rem;
-    box-shadow: inset 1px 1px rgba(0, 0, 0, 0.1), inset -1px -1px rgba(0, 0, 0, 0.1);
+    padding-bottom: 1;
+    z-index:999
+}
+.resize {
+    height: 50px;
 }
 
-[for="read_more"]:hover {
-    background: rgba(0,0,0,.5);
-    color: rgb(255,255,255);
-}
-
-[for="read_more"] span:last-of-type {
-    display: none;
-    visibility: hidden;
-}
-
-input[type=checkbox]:checked ~ section {
-    display: block;
-    visibility: visible;
-    width: 100%;
-}
-
-input[type=checkbox]:checked ~ figure { width: 100% }
-
-input[type=checkbox]:checked ~ [for="read_more"] span:first-of-type {
-    display: none;
-    visibility: hidden;
-}
-
-input[type=checkbox]:checked ~ [for="read_more"] span:last-of-type {
-    display: block;
-    visibility: visible;
+/*for profile page*/
+ .modal {
+        width: 90%;
+        max-width: 50rem;
+        height: 90%;
+        padding: 2rem;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 15;
+/*
+        top: 5%; 
+        left: 5%;
+        right: 5%;
+        bottom: 5%;
 */
-/*}*/
-/*end of hide/show text code*/
+        margin-top: 0px;
+        margin-left: 0px;
+        text-align: left;
+        z-index: 11; /* 1px higher than the overlay layer */
+        background-color: #334D5C;
+        border-radius: 0px 0 10px 0;
+        box-shadow: 2px 2px 2px 2px #000;
+        overflow-y: hidden;
+        overflow-x: hidden;
+    }
+    
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(0,0,0,0.5);
+        z-index: 10;
+    }
+    
+    .container {
+        height: 90%;
+        width: 90%;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
+ .footercontainer{
+     overflow-y:hidden;
+    margin: 0 auto;
+     z-index:11;
+ }
+   
+    
+    
 
 
 
@@ -303,7 +314,6 @@ Introduce layout-specific rules only when you need them. Use min-width to layer 
 */
 
 @media (min-width: 320px) {
-/*    html { font-size: 50%; }*/
     .textcontainer{
         font-size: 230%;
     }
@@ -381,7 +391,7 @@ A container holds all elements and controls the page’s maximum width. Using a 
 
 .container {
   margin: 0 auto;
-  max-width: 48rem;
+/*  max-width: 48rem;*/
   width: 90%;
 }
 
