--- a/www/partials/profile.html
+++ b/www/partials/profile.html
@@ -1,120 +1,32 @@
-<style>
-    .modal {
-        width: 90%;
-        max-width: 50rem;
-        height: 90%;
-        padding: 2rem;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 15;
-/*
-        top: 5%; 
-        left: 5%;
-        right: 5%;
-        bottom: 5%;
-*/
-        margin-top: 0px;
-        margin-left: 0px;
-        text-align: left;
-        z-index: 11; /* 1px higher than the overlay layer */
-        background-color: #B684A4;
-        border-radius: 10px 0 10px 0;
-        box-shadow: 2px 2px 5px 0 #000;
-        overflow-y: scroll;
-        overflow-x: hidden;
-    }
-    
-    .overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        background-color: rgba(0,0,0,0.5);
-        z-index: 10;
-    }
-    
-    .container {
-        height: 90%;
-        width: 90%;
-        overflow-y: scroll;
-        overflow-x: hidden;
-    }
- 
-    .description {
-        text-align: justify;
-        font-family: "Lato", serif;
-        font-weight: 200;
-        font-size: 1rem;
-        color: white;
-        
-     /* for word breaks */    
-        -ms-word-break: break-all;
-        word-break: break-all;
-
-     /* Non standard for webkit */
-        word-break: break-word;
-
-        -webkit-hyphens: auto;
-        -moz-hyphens: auto;
-        -ms-hyphens: auto;
-        hyphens: auto;
-        -webkit-hyphenate-limit-lines: 2;
-        -webkit-hyphenate-limit-zone: 10%;
-    }
-    
-    b {
-        font-family: 'Lato', serif;
-        font-size: 2rem;
-    }
-    
-    i {
-        font-family: 'Lato', sans-serif;
-    }
-    
-    .description {
-        padding: 1rem;
-    }
-    
-    img {
-        max-width: 100%;
-    }
-    #footer {
-        position: relative;
-        margin-top: -2em;
-    }
-    
-}
-</style>
-
 <div class="overlay" ng-show=selectedMarker ng-click="closeProfile()"></div>
 <div class="modal" ng-show=selectedMarker>
-    <div class="container">
+        <div class="container">
         <img src={{selectedMarker.image}} alt="Unable to Load Image" /><br/>
-        <b>{{selectedMarker.title}}</b><br/>
-        <i>{{selectedMarker.artist_first}} {{selectedMarker.artist_last}}, {{selectedMarker.artist_dob}}</i><br/>
+        <b class="title">{{selectedMarker.title}}</b><br/>
+        <i class="title">{{selectedMarker.artist_first}} {{selectedMarker.artist_last}}, {{selectedMarker.artist_dob}}</i><br/>
         <p class="description">{{selectedMarker.description}}</p>
-        <div id="footer">
-            <img ng-click=closeProfile() src="img/close.svg">
+        </div>
+        <div class="footercontainer">
+        <div class="footer">
+            <img ng-click=closeProfile() src="img/close.svg" class="sizeofbutton">
             <style>
                 .add {
                     fill:#FFFFFF;
                 }
                 .add.active {
-                    fill: red;
+                    fill: #FE7F78;
                 }
                 .fav {
                     fill:#FFFFFF;
                 }
                 .fav.active {
-                    fill: red;
+                    fill: #FE7F78;
                 }
             </style>
-            <span ng-show=showAdd id="add_button_svg">
-                <svg ng-click="$root.addActive = !$root.addActive; focusArt(selectedMarker.artwork_id,$root.addActive)" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="82.529px" height="82.529px" viewBox="0 0 82.529 82.529" enable-background="new 0 0 82.529 82.529" xml:space="preserve">
+            <span id="add_button_svg">
+                <svg ng-show=showAdd ng-click="$root.addActive = !$root.addActive; focusArt(selectedMarker.artwork_id,$root.addActive)" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="82.529px" height="82.529px" viewBox="0 0 82.529 82.529" enable-background="new 0 0 82.529 82.529" xml:space="preserve" class="sizeofbutton">
                     <circle fill="#6798AC" cx="41.264" cy="41.265" r="41.265"/>
-                    <g ng-class="{'add': !$root.addActive, 'add active': $root.addActive}">
+                    <g ng-class="{'add': !addActive, 'add active': addActive}">
                         <rect x="35.883" y="17" width="11" height="47"/>
                         <rect x="17.883" y="35" width="47" height="11"/>
                     </g>
@@ -122,11 +34,11 @@
             </span>
         
             <span id="favorite_button_svg">
-                <svg ng-click="$root.favActive = !$root.favActive;favorite(selectedMarker.artwork_id,$root.favActive)" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="82.529px" height="82.529px" viewBox="0 0 82.529 82.529" enable-background="new 0 0 82.529 82.529" xml:space="preserve">
+                <svg ng-click="$root.favActive = !$root.favActive;favorite(selectedMarker.artwork_id,$root.favActive)" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="82.529px" height="82.529px" viewBox="0 0 82.529 82.529" enable-background="new 0 0 82.529 82.529" xml:space="preserve" class="sizeofbutton">
                 <circle fill="#6798AC" cx="41.264" cy="41.265" r="41.265"/>
                 <path ng-class="{'fav': !$root.favActive, 'fav active': $root.favActive}" d="M58.016 26.693c-6.045-2.799-13.953-0.166-16.75 5.865 -2.797-6.031-10.703-8.667-16.75-5.865 -6.439 2.986-9.52 10.615-4.432 19.616 3.609 6.404 10.012 11.229 21.182 19.881 11.168-8.652 17.572-13.48 21.182-19.881C67.533 37.309 64.453 29.68 58.016 26.693z"/>
                 </svg>
             </span>
         </div> 
-    </div>
+        </div>
 </div>
