--- a/www/partials/search.html
+++ b/www/partials/search.html
@@ -1,15 +1,11 @@
-<div style="background:#27d097;">
-    <div id="search_bar">
-        <input type="search" ng-modal="search" placeholder="Type Search"style="width:100%;">
-    </div>
-    <div style="width:100%;height:100%;">
-        <div ng-repeat="name in names | filter:search">
-            <p>{{name}}</p>
-            <hr>
+
+<div style="height:100%;width:100%;background:#eeeeee">
+    <a ui-sref="index" ><b>BACK</b></a>
+    <input type="search" ng-model="search" placeholder="Type Search..." style="color:black;width:100%">
+    <div ng-repeat="art in artwork | filter:search">
+        <div ng-click="openProfile(art)">
+            <a style="color:#6798AC">{{art.title}}</a><br/><i style="color:#FE7F78">               {{art.artist_first}} {{art.artist_last}}</i><br/>
         </div>
-        <!--<div ng-repeat="art in artwork | filter:search">
-            <p>{{art.title}}</p>
-            <hr>
-        </div>-->
     </div>
+    <div ng-include="'partials/profile.html'"></div>
 </div>
