--- a/www/partials/tours.html
+++ b/www/partials/tours.html
@@ -1,6 +1,6 @@
 <snap-drawer>
     <div id="menucontainer">
-    <br/><a ui-sref="index" style="font-size: 2rem;">back</a><br/><br/><br/>
+    <br/><a ui-sref="index" style="font-size: 2rem;"><b>BACK</b></a><br/><br/><br/>
     <div>
         <div snap-toggle="left" ng-click="favTourClick()">
             <a style="font-size: 2rem;">Favorites</a><br/><br/>
@@ -22,7 +22,7 @@
 
 <snap-content snap-options="sliderOptions" style="background-color: #50f062">
     <div id="menucontainer">
-        <a snap-toggle="left" class="sub">view tours</a> | <a ui-sref="index" class="sub">start tour</a><div id="map-canvas"></div>
+        <a snap-toggle="left" class="sub"><b>VIEW</b></a> | <a ui-sref="index" class="sub"><b>START</b></a><div id="map-canvas"></div>
     </div>
 </snap-content>
 <div ng-include="'partials/profile.html'"></div>
