--- a/www/partials/origin.html
+++ b/www/partials/origin.html
@@ -1,6 +1,6 @@
 <div class="logotitle">
-    <b ui-sref="search">AR</b>tour 
-    <img ui-sref="search" src="img/search.svg" class="logosearch" >
+    <b>AR</b>tour 
+    <img ui-sref="search.artist" src="img/search.svg" class="logosearch" >
 </div>
 <div class="textcontainer">
     
