--- a/www/partials/profile.html
+++ b/www/partials/profile.html
@@ -3,7 +3,7 @@
         <div class="container">
         <img src={{selectedMarker.image}} alt="Unable to Load Image" /><br/>
         <b class="title">{{selectedMarker.title}}</b><br/>
-        <i class="title">{{selectedMarker.artist_first}} {{selectedMarker.artist_last}}, {{selectedMarker.artist_dob}}</i><br/>
+        <i class="title">{{selectedMarker.artist_name}}, {{selectedMarker.artist_dob}}</i><br/>
         <p class="description">{{selectedMarker.description}}</p>
         </div>
         <div class="footercontainer">
