--- a/www/partials/search.html
+++ b/www/partials/search.html
@@ -3,17 +3,14 @@
     <a ui-sref="index" ><b>BACK</b></a>
     <input type="search" ng-model="search" placeholder="Type Search..." style="color:black;width:100%">
     <div style="width:100%;">
-        <div ng-click="order='distance';getPositionIntel()" style="width:33.3%;float:left">Nearby</div>
-        <div ng-click="order='likes';" style="width:33.3%;float:left">Popular</div>
-        <div ng-click="order='date_made';" style="width:33.3%;float:left">Recent</div>
+        <div ui-sref="search.artist" style="width:50%;float:left"><h1>Artist</h1></div>
+        <div ui-sref="search.artwork" style="width:50%;float:left"><h1>Artwork</h1></div>
     </div>
-    <div ng-repeat="art in artwork | filter:search | orderBy:order">
-        <div ng-click="openProfile(art)">
-            {{art.title}}
-            {{art.artist_first}}
-            {{art.artist_last}}
-            {{art.date_made}}
-        </div>
+    <div ui-view="content"></div>
+    <div style="width:100%;">
+        <div ng-click="order='distance';getPositionIntel()" style="width:33.3%;float:left">Nearby</div>
+        <div ng-click="order='counter';" style="width:33.3%;float:left">Popular</div>
+        <div ng-click="order='date_made';" style="width:33.3%;float:left">Recent</div>
     </div>
     <div ng-include="'partials/profile.html'"></div>
 </div>
