--- a/www/partials/tours.html
+++ b/www/partials/tours.html
@@ -6,14 +6,14 @@
             <a style="font-size: 2rem;">Favorites</a><br/><br/>
             <hr>
         </div>
-        <div snap-toggle="left" ng-click="newTourClick()">
+        <!--<div snap-toggle="left" ng-click="newTourClick()">
             <a style="font-size: 2rem;">New</a><br/><br/>
             <hr>
-        </div>
+        </div>-->
     </div>
     <div ng-repeat="tour in tours">
         <div snap-toggle="left" ng-click="tourClick(tour)">
-            <a style="font-size: 2rem;">{{tour.title}}</a><br/><br/>
+            <a style="font-size: 2rem;">{{tour.tour_title}}</a><br/><br/>
             <hr>
         </div>
     </div>
@@ -22,7 +22,7 @@
 
 <snap-content snap-options="sliderOptions" style="background-color: #50f062">
     <div id="menucontainer">
-        <a snap-toggle="left" class="sub"><b>VIEW</b></a> | <a ui-sref="index" class="sub"><b>START</b></a><div id="map-canvas"></div>
+        <a snap-toggle="left" class="sub"><b>VIEW</b></a> <span ng-show=tourArt>| <a ng-click=startTour() class="sub"><b>START</b></a></span><div id="map-canvas"></div>
     </div>
 </snap-content>
 <div ng-include="'partials/profile.html'"></div>
